--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <button class="button" id="1" value="1" onclick="toInput('1')">1</button>
     <button class="button" id="2" value="2" onclick="toInput('2')">2</button>
     <button class="button" id="3" value="3" onclick="toInput('3')">3</button>
+    <button class="button" id="4" value="4" onclick="toInput('4')">4</button>
     <button class="button" id="6" value="6" onclick="toInput('6')">6</button>
     <button data-button="8" class="number">8</button>
     <button class="button" onclick="subtract()">Minus</button>
